test/testdata/expected/test2.expected/cluster-gitops/gitops/namespace_openshift-gitops_resources/routes/kam.txt
NAME   HOST/PORT                                                             PATH   SERVICES   PORT   TERMINATION        WILDCARD
kam    kam-openshift-gitops.apps.rhoms-4.13-030604.dev.openshiftappsvc.org          kam        8443   passthrough/None   None
