test/testdata/expected/test2.expected/cluster-gitops/gitops/namespace_openshift-gitops_resources/routes/kam.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2023-03-06T20:00:50Z"
  name: kam
  namespace: openshift-gitops
  ownerReferences:
  - apiVersion: pipelines.openshift.io/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: GitopsService
    name: cluster
    uid: 11dcbd2a-26d0-4233-9a7f-b7370ff9da4e
  resourceVersion: "680526"
  uid: 02e62c0c-a542-44e5-892f-b0b5b11b83ea
spec:
  host: kam-openshift-gitops.apps.rhoms-4.13-030604.dev.openshiftappsvc.org
  port:
    targetPort: 8443
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: kam
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2023-03-06T20:00:50Z"
      status: "True"
      type: Admitted
    host: kam-openshift-gitops.apps.rhoms-4.13-030604.dev.openshiftappsvc.org
    routerCanonicalHostname: router-default.apps.rhoms-4.13-030604.dev.openshiftappsvc.org
    routerName: default
    wildcardPolicy: None
