test/testdata/expected/test2.expected/cluster-gitops/gitops/namespace_openshift-gitops_resources/routes/openshift-gitops-server.txt
NAME                      HOST/PORT                                                                                 PATH   SERVICES                  PORT    TERMINATION            WILDCARD
openshift-gitops-server   openshift-gitops-server-openshift-gitops.apps.rhoms-4.13-030604.dev.openshiftappsvc.org          openshift-gitops-server   https   passthrough/Redirect   None
