test/testdata/expected/test2.expected/cluster-gitops/gitops/namespace_openshift-gitops_resources/routes/routes.txt
NAME                      HOST/PORT                                                                                 PATH   SERVICES                  PORT    TERMINATION            WILDCARD
kam                       kam-openshift-gitops.apps.rhoms-4.13-030604.dev.openshiftappsvc.org                              kam                       8443    passthrough/None       None
openshift-gitops-server   openshift-gitops-server-openshift-gitops.apps.rhoms-4.13-030604.dev.openshiftappsvc.org          openshift-gitops-server   https   passthrough/Redirect   None
